# SDAP

./: CMakeLists.txt  README.md  example.cpp  make_logfile.txt
cmake/: FindSDPA.cmake
